crates/cyrus-core/tests/ui/fail/arithmetic_nonzero_times_zero.stderr
error[E0308]: mismatched types
  --> tests/ui/fail/arithmetic_nonzero_times_zero.rs:13:33
   |
13 |     let _result: F64<NonZero> = nz * z;
   |                  ------------   ^^^^^^ expected `F64<NonZero>`, found `F64<Zero>`
   |                  |
   |                  expected due to this
   |
   = note: expected struct `F64<cyrus_core::types::NonZero>`
              found struct `F64<cyrus_core::types::Zero>`
